--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "eslint": "^3.8.0",
     "eslint-plugin-import": "^2.0.1",
     "express": "^4.14.0",
-    "mocha": "^3.1.2"
-  },
-  "devDependencies": {
+    "mocha": "^3.1.2",
     "babel-preset-es2015": "^6.16.0"
   }
 }
