--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/_mocha ",
+    "test": "node_modules/.bin/_mocha --compilers js:babel-core/register",
     "start": "node_modules/.bin/babel-node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
     "chai": "^3.5.0",
     "eslint": "^3.8.0",
     "eslint-plugin-import": "^2.0.1",
     "express": "^4.14.0",
     "mocha": "^3.1.2",
-    "babel-preset-es2015": "^6.16.0"
+    "supertest": "^2.0.1"
   }
 }
